@@ -5,6 +5,7 @@
 	* Fixed bug #514143: 'Annoying obsolete FIXME in the routes'.
 	* Fixed bug #513483: 'routes use zero-or-more instead of one-or-more'.
 	* Fixed bug #510452: 'Requests for files do not show in server output'.
+	* Fixed bug #510450: 'The unknown controller 404 page uses the wrong content type'.
 
 2010-01-19  Release 0.3.0
 	* Actions can be rendered in html, json, or xml.
